# Hexapoda

./: CMakeLists.txt  README.md  package.xml
Hexapod from Windows/: Hexapod.urdf
Hexapod from Windows/meshes/: ST3215-v6_SG-ZIJI_15.stl  ST3215-v6_XG-ZIJI_16.stl
Hexapod/meshes/: Bracket-v19.stl  ST3215-v6_ZK_122.stl  ST3215-v6_金属舵盘从动-v2.stl  ST3215-v6_金属舵盘驱动-v2.stl  Upper-Leg-v5_Rear-Bracket-v4.stl  base_link-v5.stl
hexapod_from_linux/hexapod_from_linux/: CMakeLists.txt  package.xml
hexapod_from_linux/hexapod_from_linux/config/: hexapod.rviz
hexapod_from_linux/hexapod_from_linux/example/: Servo.urdf  base.urdf
hexapod_from_linux/hexapod_from_linux/launch/: hexapod.launch.py  simplehexapod.launch.py  simplehexapod.launch.xml
hexapod_from_linux/hexapod_from_linux/models/: base.stl  hexagon.stl  st3215.stl
hexapod_from_linux/hexapod_from_linux/urdf/: Hexapod.urdf  Hexapoda.urdf.xacro  controller.xacro
hexapod_from_linux/hexapod_from_linux/yaml/: hexapod_controller.yaml
src/: CMakeLists.txt  package.xml
src/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
src/meshes/: Bracket_v19_1.stl  Bracket_v19__1__1.stl  Left_Horn_v4_1.stl  Left_Horn_v4__1__1.stl  Left_Horn_v4__2__1.stl  Rear_Bracket_v4_1.stl  Rear_Bracket_v4__1__1.stl  Right_Horn_v3_1.stl  Right_Horn_v3__1__1.stl  Right_Horn_v3__2__1.stl  Servo_Body_v2_1.stl  Servo_Body_v2__1__1.stl  Servo_Body_v2__2__1.stl  Upper_Leg_v7_1.stl  base_link.stl
src/urdf/: Hexapod_urdf_transfer.gazebo  Hexapod_urdf_transfer.trans  Hexapod_urdf_transfer.xacro  materials.xacro
(+8 files in other folders)
